# assignments

./: README.md
ca4/: mlutils.py  (+6 more)
thesis/elena-test/: README.md  clientapp.Dockerfile  pyproject.toml  serverapp.Dockerfile
thesis/elena-test/elena_test/: __init__.py  client_app.py  server_app.py  task.py
thesis/elena-test/elena_test/bluetooth_client/: bluetooth_client.py
thesis/elena-test/tf_federation/: client_app.py  properties.py  server_app.py  strategy.py  task.py
thesis/elena-test/wandb/: latest-run
thesis/elena-test/wandb/run-20250220_122302-u311yajm/: run-u311yajm.wandb
thesis/elena-test/wandb/run-20250220_124154-9wtyvd53/: run-9wtyvd53.wandb
thesis/elena-test/wandb/run-20250220_125448-4mymqfsn/: run-4mymqfsn.wandb
thesis/elena-test/wandb/run-20250220_131513-a68b3yu7/: run-a68b3yu7.wandb
thesis/federated-learning/: README.md  build.sh  clientapp.Dockerfile  models.keras  pyproject.toml  serverapp.Dockerfile
thesis/federated-learning/logs/: local-run-mnist-base.log.txt  local-run-mnist.log.txt  local-run-zalando-base.log.txt  local-run-zalando.log.txt
thesis/federated-learning/logs/deploy/: cifar-run.log.txt  mnist-run-2.log.txt  mnist-run.log.txt  zalando-run.log.txt
thesis/federated-learning/logs/mnist/: 4round-8node-simulation-base.log.txt  4round-8node-simulation-c-acc.log.txt  4round-8node-simulation-c-loss.log.txt  4round-8node-simulation.log.txt  6round-2node-simulation-base.log.txt  6round-2node-simulation-c-acc.log.txt  8round-20node-simulation-base.log.txt  8round-20node-simulation-c-acc.log.txt  8round-20node-simulation-c-loss.log.txt  8round-20node-simulation.log.txt
thesis/federated-learning/logs/uotf-cs-cifar10/: 4round-8node-simulation-base.log.txt  4round-8node-simulation-c-acc.log.txt  4round-8node-simulation-c-loss.log.txt  4round-8node-simulation.log.txt  6round-2node-simulation-base.log.txt  6round-2node-simulation-c-acc.log.txt  6round-2node-simulation-c-loss.log.txt  6round-2node-simulation.log.txt  8round-20node-simulation-base.log.txt  8round-20node-simulation-c-acc.log.txt  8round-20node-simulation-c-loss.log.txt  8round-20node-simulation.log.txt
thesis/federated-learning/logs/zalando/: 15round-30node-simulation-base.log.txt  15round-30node-simulation-c-acc.log.txt  15round-30node-simulation-loss.log.txt  4round-8node-simulation-base.log.txt  res.csv  (+12 more)
thesis/federated-learning/tf_federation/: ________strategy.py  client_app.py  evaluation.py  server_app.py  storage.py  strategy.py  strategy_new.py  task.py  utils.py
(+528 files in other folders)
