[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tf_embedded_federation"
version = "1.0.0"
description = "Federated Learning with Tensorflow/Keras, Flower, WanDB, and custom strategy"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow-cpu>=2.9.1, != 2.11.1 ; platform_machine == \"x86_64\"",
    "tensorflow-macos>=2.9.1, != 2.11.1 ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
    "keras==3.8.0",
    "tensorflow==2.16.2",
    "tomli==2.2.1",
    "wandb==0.17.8",
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "tf_federation.server_app:app"
clientapp = "tf_federation.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
local-epochs = 1
batch-size = 32
fraction-fit = 0.25
fraction-evaluate = 0.5
use-wandb = true
project-name = "flower-embedded-fed"
run-identifier = "development"
base-weights-path = ""

[tool.flwr.federations]
default = "local-sim"

[tool.flwr.federations.local-sim]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.0 # ratio of VRAM a ClientApp has access to

[tool.flwr.federations.local-sim-gpu]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.25

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true

[tool.flwr.custom_params]
dataset = "zalando-datasets/fashion_mnist"